--- a/app/src/main/res/layout/fragment_main_event.xml
+++ b/app/src/main/res/layout/fragment_main_event.xml
@@ -5,13 +5,15 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@id/fragment_main_event"
               tools:context="org.eurofurence.connavigator.MainEventFragment"
-              android:background="@android:color/background_light">
+              android:background="@android:color/background_light"
+              android:padding="2dp">
 
     <!-- TODO: Update blank fragment layout -->
     <android.support.v7.widget.CardView
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             app:cardElevation="2dp"
+            app:cardUseCompatPadding="true"
             android:id="@+id/eventCard">
 
         <LinearLayout
@@ -49,24 +51,20 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Time placeholder"
-                    android:padding="8dp"
-                    android:paddingTop="3dp"
-            />
+                    style="@style/AppTheme.Header.Sub"/>
 
             <TextView
                     android:id="@+id/eventHosts"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Hosts placeholder"
-                    android:padding="8dp"
-                    android:paddingBottom="11dp"/>
+                    style="@style/AppTheme.Header.Sub"/>
 
             <TextView
                     android:id="@+id/eventDescription"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Description placeholder"
-                    android:padding="8dp"/>
+                    android:text="Description placeholder"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
