--- a/app/src/main/res/layout/fragment_event_card.xml
+++ b/app/src/main/res/layout/fragment_event_card.xml
@@ -1,37 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    xmlns:app="http://schemas.android.com/apk/res-auto"
-                                    app:cardUseCompatPadding="true"
-                                    android:id="@+id/eventCard">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              app:cardUseCompatPadding="true"
+              android:background="@color/cardview_light_background"
+              android:id="@+id/eventCard">
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal" android:weightSum="10">
         <LinearLayout android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:layout_weight="9"
                       android:orientation="vertical"
+                      android:padding="@dimen/outer_padding">
+
+            <TextView android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:text="start time"
+                      android:id="@+id/eventStartTime"
+                      android:singleLine="true"
+                      android:textAppearance="?android:textAppearanceMedium"/>
+            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
+                      android:id="@+id/eventEndTime"
+                      android:singleLine="true"
+                      android:text="end time"
+                      android:textAppearance="?android:textAppearanceSmall"/>
+        </LinearLayout>
+        <LinearLayout android:layout_width="wrap_content"
+                      android:layout_height="wrap_content"
+                      android:orientation="vertical"
+                      android:layout_weight="9"
                       android:padding="@dimen/outer_padding">
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:text="Title"
                       android:textAppearance="?android:textAppearanceLarge"
                       android:id="@+id/eventTitle"
-                      android:singleLine="true"
-                      android:paddingBottom="@dimen/inner_padding"/>
+                      android:singleLine="true"/>
             <TextView android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
-                      android:text="Times"
-                      android:id="@+id/eventDate"
                       android:singleLine="true"
-                      android:textAppearance="?android:textAppearanceMedium"/>
-
+                      android:id="@+id/eventRoom"
+                      android:text="Room A"
+                      android:textAppearance="?android:textAppearanceSmall"/>
         </LinearLayout>
-        <ImageView android:layout_width="100dp"
-                   android:layout_height="match_parent"
-                   android:layout_weight="1"
-                   android:scaleType="centerCrop"
-                   android:id="@+id/eventImage"/>
     </LinearLayout>
-</android.support.v7.widget.CardView>
+    <ImageView android:layout_width="match_parent"
+               android:layout_height="200dp"
+               android:layout_weight="1"
+               android:scaleType="centerCrop"
+               android:id="@+id/eventImage"/>
+</LinearLayout>
