--- a/app/src/main/res/layout/fragment_event_card.xml
+++ b/app/src/main/res/layout/fragment_event_card.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:clickable="true"
+              android:longClickable="true"
               xmlns:app="http://schemas.android.com/apk/res-auto"
               app:cardUseCompatPadding="true"
               android:background="@color/cardview_light_background"
-              android:id="@+id/eventCard">
+              android:id="@+id/eventCard" android:orientation="vertical">
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:orientation="horizontal" android:weightSum="10">
