--- a/app/src/main/res/layout/fview_events_viewpager.xml
+++ b/app/src/main/res/layout/fview_events_viewpager.xml
@@ -4,9 +4,11 @@
               android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
-android:background="@color/backgroundGrey">
+              android:background="@color/backgroundGrey">
     <android.support.v4.view.ViewPager android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:id="@+id/eventPager"
+                                       android:clickable="true"
+                                       android:longClickable="true"
                                        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 </LinearLayout>
